--- a/PeminjamanBuku/PeminjamanBuku.vcxproj
+++ b/PeminjamanBuku/PeminjamanBuku.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{2fc87949-1c90-4dbb-800f-b27f1acc0a99}</ProjectGuid>
     <RootNamespace>PeminjamanBuku</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ProgramPeminjamanBukuPerpustakaan</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,12 +140,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="daftarBuku.h" />
     <ClInclude Include="function.h" />
-    <ClInclude Include="halamanDepan.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
